--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.344.0",
+        "morgan": "^1.10.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
