--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "framer-motion": "^12.23.3",
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
