--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@heroicons/react": "^2.2.0",
+        "@mui/icons-material": "^7.2.0",
+        "@mui/material": "^7.2.0",
         "framer-motion": "^12.23.3",
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
@@ -18,6 +22,7 @@
         "morgan": "^1.10.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
         "recharts": "^3.1.0"
     },
