--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@heroicons/react": "^2.2.0",
         "@mui/icons-material": "^7.2.0",
         "@mui/material": "^7.2.0",
+        "axios": "^1.11.0",
         "framer-motion": "^12.23.3",
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
