--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
+        "react-router-dom": "^7.7.1",
         "recharts": "^3.1.0"
     },
     "devDependencies": {
