--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.1"
   }
 }
