--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.344.0",
         "morgan": "^1.10.1",
+        "node-cron": "^4.2.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.5.2",
